open-policy-agent/open-policy-agent/policy/gen-required-labels/samples/deployments-must-have-labels/allowed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: allowed-deployment
spec:
  selector:
    matchLabels:
      app: esco
      costcenter: 0001-123
      portfolio: ContainerPlatform
      drcategory: dr0
      appcode: esco
      environment: dev
      project: esco
