open-policy-agent/open-policy-agent/policy/gen-required-labels/samples/deployments-must-have-labels/disallowed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: disallowed-deployment
spec:
  selector:
    matchLabels:
      app: esco
